Switch to relative width to fix layout issues with custom fonts

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ img {
 
 #blurb-box {
   float: left;
-  width: 500px;
+  width: 35em;
 }
 
 #blurb-box h1 {
